--- a/index.html
+++ b/index.html
@@ -1,13 +1,1 @@
-<!doctype html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <link rel="manifest" href="manifest.json">
-    <title>Untitled Document</title>
-</head>
-<body>
-
-
-
-</body>
-</html>
+Hello world!
