--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="manifest" href="manifest.json">
-    <title>Untitled Document</title>
+    <title>Teste Notificação</title>
 </head>
 <body>
 
