--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <link rel="manifest" href="manifest.json">
+    <script src="service-worker.js"></script>
+    <script src="service-worker-push.js"></script>
+    <script src="service-worker-notification.js"></script>
     <title>Teste Notificação</title>
 </head>
 <body>
